--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,16 +1,17 @@
 {
   "current": {
-    "logo": "shopify:\/\/shop_images\/mia.png",
+    "logo": "shopify:\/\/shop_images\/Mia-Black.png",
     "logo_width": 80,
-    "type_header_font": "assistant_n4",
+    "type_header_font": "din_neuzeit_grotesk_n3",
     "heading_scale": 100,
-    "type_body_font": "assistant_n4",
+    "type_body_font": "swiss_721_n4",
     "body_scale": 100,
     "page_width": 1200,
     "spacing_sections": 0,
     "spacing_grid_horizontal": 8,
     "spacing_grid_vertical": 8,
-    "buttons_border_thickness": 1,
+    "animations_hover_elements": "vertical-lift",
+    "buttons_border_thickness": 2,
     "buttons_border_opacity": 100,
     "buttons_radius": 0,
     "buttons_shadow_opacity": 0,
@@ -24,7 +25,7 @@
     "variant_pills_shadow_horizontal_offset": 0,
     "variant_pills_shadow_vertical_offset": 4,
     "variant_pills_shadow_blur": 5,
-    "inputs_border_thickness": 1,
+    "inputs_border_thickness": 2,
     "inputs_border_opacity": 55,
     "inputs_radius": 0,
     "inputs_shadow_opacity": 0,
@@ -121,8 +122,18 @@
       },
       "main-password-footer": {
         "type": "main-password-footer",
+        "custom_css": [
+
+        ],
         "settings": {
           "color_scheme": "scheme-1"
+        }
+      },
+      "loader-full": {
+        "type": "loader-full",
+        "settings": {
+          "loader_image": "shopify:\/\/shop_images\/MIA_Web_Project_Scope.png",
+          "loader_quote": "Fentanyl presence in the U.S. is skyrocketing — and coming into contact with just a few grains can kill you."
         }
       }
     },
@@ -132,7 +143,7 @@
     "color_schemes": {
       "scheme-1": {
         "settings": {
-          "background": "#FFFFFF",
+          "background": "#ffffff",
           "background_gradient": "",
           "text": "#000000",
           "button": "#000000",
